--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,44 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-demo</title>
+    <style>
+      .el-upload .el-upload--text{
+          position:absolute!important;
+          left: 0!important;
+          top: 0!important;
+      }
+      #app{
+          text-align: left!important;
+      }
+      .el-upload .el-upload--text{
+        position:absolute!important;
+        left: 0!important;
+        top: 0!important;
+        margin-top: 4px!important;
+      }
+      .el-tabs__content{
+        min-height: 500px;
+      }
+      #pane-first{
+        width: 600px!important;
+        position: absolute!important;
+        top: 50%!important;
+        left: 50%!important;
+        transform: translate(-50%, -50%)!important;
+        border: 1px solid gray!important;
+        box-shadow: 1px 1px 1px grey!important;
+        border-radius: 5px!important;
+        padding: 8px!important;
+        padding-top: 25px!important;
+        padding-right: 13px!important;
+      }
+      .el-input__inner{
+        width:520px!important;
+      }
+      .el-textarea__inner{
+        width: 520px!important;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
